Update: Meetups - Se elimina boton de youtube

--- a/docs/meetups/2024/202405-mayo.md
+++ b/docs/meetups/2024/202405-mayo.md
@@ -5,7 +5,7 @@ title: "Pydantic: Validaciones de datos con Type Hints"
 # Meetup #PythonCDMX <i class="fab fa-python"></i> - Mayo 2024
 
 <div class="meetup-hero">
-    <h1>✨ Pydantic: Validaciones de datos con Type Hints ✨</h1>
+    <h1>Pydantic: Validaciones de datos con Type Hints</h1>
     <p class="meetup-subtitle">Validación de datos con Pydantic</p>
 </div>
 
@@ -85,9 +85,6 @@ title: "Pydantic: Validaciones de datos con Type Hints"
                 allowfullscreen>
             ></iframe>
         </div>
-        <a href="https://www.youtube.com/watch?v=acpwiu_sfjk" class="youtube-btn">
-            <i class="fab fa-youtube"></i> Ver en YouTube
-        </a>
     </div>
 </div>
 
