--- a/docs/meetups/2025/202501-enero.md
+++ b/docs/meetups/2025/202501-enero.md
@@ -5,7 +5,7 @@ title: "Crea extensiones para LibreOffice / PCI DSS en Python"
 # Meetup #PythonCDMX <i class="fab fa-python"></i> - Enero 2025
 
 <div class="meetup-hero">
-    <h1>✨ Crea extensiones para LibreOffice / PCI DSS en Python ✨</h1>
+    <h1>Crea extensiones para LibreOffice / PCI DSS en Python</h1>
     <p class="meetup-subtitle">Dos charlas sobre LibreOffice y seguridad</p>
 </div>
 
@@ -146,9 +146,6 @@ title: "Crea extensiones para LibreOffice / PCI DSS en Python"
                 allowfullscreen>
             ></iframe>
         </div>
-        <a href="https://www.youtube.com/watch?v=gOjfq41I8XY" class="youtube-btn">
-            <i class="fab fa-youtube"></i> Ver en YouTube
-        </a>
     </div>
 </div>
 
