--- a/docs/meetups/2025/202505-mayo.md
+++ b/docs/meetups/2025/202505-mayo.md
@@ -5,7 +5,7 @@ title: "Publicando un paquete en PyPI"
 # Meetup #PythonCDMX <i class="fab fa-python"></i> - Mayo 2025
 
 <div class="meetup-hero">
-    <h1>✨ Publicando un paquete en PyPI ✨</h1>
+    <h1>Publicando un paquete en PyPI</h1>
     <p class="meetup-subtitle">Construyendo y publicando paquetes Python</p>
 </div>
 
@@ -85,9 +85,6 @@ title: "Publicando un paquete en PyPI"
                 allowfullscreen>
             ></iframe>
         </div>
-        <a href="https://www.youtube.com/watch?v=1nHTVEOSRlg" class="youtube-btn">
-            <i class="fab fa-youtube"></i> Ver en YouTube
-        </a>
     </div>
 </div>
 
