--- a/docs/meetups/2025/202506-junio.md
+++ b/docs/meetups/2025/202506-junio.md
@@ -5,7 +5,7 @@ title: "Usando Python y software libre"
 # Meetup #PythonCDMX <i class="fab fa-python"></i> - Junio 2025
 
 <div class="meetup-hero">
-    <h1>✨ Usando Python y software libre ✨</h1>
+    <h1>Usando Python y software libre</h1>
     <p class="meetup-subtitle">Traductor de voz español-inglés con tecnologías open source</p>
 </div>
 
@@ -87,9 +87,6 @@ title: "Usando Python y software libre"
                 allowfullscreen>
             ></iframe>
         </div>
-        <a href="https://www.youtube.com/watch?v=hSaZXuY30zI" class="youtube-btn">
-            <i class="fab fa-youtube"></i> Ver en YouTube
-        </a>
     </div>
 </div>
 
