--- a/docs/meetups/2024/202401-enero.md
+++ b/docs/meetups/2024/202401-enero.md
@@ -5,7 +5,7 @@ title: "Ambientes virtuales con venv, pyenv y poetry"
 # Meetup #PythonCDMX <i class="fab fa-python"></i> - Enero 2024
 
 <div class="meetup-hero">
-    <h1>✨ Ambientes virtuales con venv, pyenv y poetry ✨</h1>
+    <h1>Ambientes virtuales con venv, pyenv y poetry</h1>
     <p class="meetup-subtitle">Gestión de ambientes virtuales en Python</p>
 </div>
 
@@ -85,9 +85,6 @@ title: "Ambientes virtuales con venv, pyenv y poetry"
                 allowfullscreen>
             ></iframe>
         </div>
-        <a href="https://www.youtube.com/watch?v=placeholder" class="youtube-btn">
-            <i class="fab fa-youtube"></i> Ver en YouTube
-        </a>
     </div>
 </div>
 
