--- a/docs/meetups/2024/202403-marzo.md
+++ b/docs/meetups/2024/202403-marzo.md
@@ -5,7 +5,7 @@ title: "Desarrollo de API REST con Flask"
 # Meetup #PythonCDMX <i class="fab fa-python"></i> - Marzo 2024
 
 <div class="meetup-hero">
-    <h1>✨ Desarrollo de API REST con Flask ✨</h1>
+    <h1>Desarrollo de API REST con Flask</h1>
     <p class="meetup-subtitle">Dominando la elegancia y la eficiencia</p>
 </div>
 
@@ -85,9 +85,6 @@ title: "Desarrollo de API REST con Flask"
                 allowfullscreen>
             ></iframe>
         </div>
-        <a href="https://www.youtube.com/watch?v=MMHaIrZ1ISw" class="youtube-btn">
-            <i class="fab fa-youtube"></i> Ver en YouTube
-        </a>
     </div>
 </div>
 
