--- a/docs/meetups/2024/202404-abril.md
+++ b/docs/meetups/2024/202404-abril.md
@@ -5,7 +5,7 @@ title: "Desarrollo en Python usando Contenedores"
 # Meetup #PythonCDMX <i class="fab fa-python"></i> - Abril 2024
 
 <div class="meetup-hero">
-    <h1>✨ Desarrollo en Python usando Contenedores ✨</h1>
+    <h1>Desarrollo en Python usando Contenedores</h1>
     <p class="meetup-subtitle">Los ambientes virtuales son cosa del pasado</p>
 </div>
 
@@ -85,9 +85,6 @@ title: "Desarrollo en Python usando Contenedores"
                 allowfullscreen>
             ></iframe>
         </div>
-        <a href="https://www.youtube.com/watch?v=emJYJhFe0l8" class="youtube-btn">
-            <i class="fab fa-youtube"></i> Ver en YouTube
-        </a>
     </div>
 </div>
 
