--- a/docs/meetups/2024/202406-junio.md
+++ b/docs/meetups/2024/202406-junio.md
@@ -5,7 +5,7 @@ title: "Matemáticas y Python: Ciencia Detrás de la Regresión Lineal"
 # Meetup #PythonCDMX <i class="fab fa-python"></i> - Junio 2024
 
 <div class="meetup-hero">
-    <h1>✨ Matemáticas y Python: Ciencia Detrás de la Regresión Lineal ✨</h1>
+    <h1>Matemáticas y Python: Ciencia Detrás de la Regresión Lineal</h1>
     <p class="meetup-subtitle">Fundamentos matemáticos de la regresión lineal</p>
 </div>
 
@@ -85,9 +85,6 @@ title: "Matemáticas y Python: Ciencia Detrás de la Regresión Lineal"
                 allowfullscreen>
             ></iframe>
         </div>
-        <a href="https://www.youtube.com/watch?v=BmSI2IgHG_c" class="youtube-btn">
-            <i class="fab fa-youtube"></i> Ver en YouTube
-        </a>
     </div>
 </div>
 
