--- a/docs/meetups/2024/202407-julio.md
+++ b/docs/meetups/2024/202407-julio.md
@@ -5,7 +5,7 @@ title: "¡Doble Charla! Python sin GIL / Esquemas ETL"
 # Meetup #PythonCDMX <i class="fab fa-python"></i> - Julio 2024
 
 <div class="meetup-hero">
-    <h1>✨ ¡Doble Charla! Python sin GIL / Esquemas ETL ✨</h1>
+    <h1>¡Doble Charla! Python sin GIL / Esquemas ETL</h1>
     <p class="meetup-subtitle">Dos charlas sobre el futuro de Python y ETL</p>
 </div>
 
@@ -147,9 +147,6 @@ title: "¡Doble Charla! Python sin GIL / Esquemas ETL"
                 allowfullscreen>
             ></iframe>
         </div>
-        <a href="https://www.youtube.com/watch?v=o9AGel1P_qU" class="youtube-btn">
-            <i class="fab fa-youtube"></i> Ver en YouTube
-        </a>
     </div>
 </div>
 
