--- a/docs/meetups/2024/202408-agosto.md
+++ b/docs/meetups/2024/202408-agosto.md
@@ -5,7 +5,7 @@ title: "Protocolos en Python / Convertirse en Contribuidor Open Source"
 # Meetup #PythonCDMX <i class="fab fa-python"></i> - Agosto 2024
 
 <div class="meetup-hero">
-    <h1>✨ Protocolos en Python / Convertirse en Contribuidor Open Source ✨</h1>
+    <h1>Protocolos en Python / Convertirse en Contribuidor Open Source</h1>
     <p class="meetup-subtitle">Dos charlas sobre tipado estático y contribución open source</p>
 </div>
 
@@ -147,9 +147,6 @@ title: "Protocolos en Python / Convertirse en Contribuidor Open Source"
                 allowfullscreen>
             ></iframe>
         </div>
-        <a href="https://www.youtube.com/watch?v=97NmGheUxmE" class="youtube-btn">
-            <i class="fab fa-youtube"></i> Ver en YouTube
-        </a>
     </div>
 </div>
 
