--- a/docs/meetups/2025/202503-marzo.md
+++ b/docs/meetups/2025/202503-marzo.md
@@ -5,7 +5,7 @@ title: "Agentes de IA / PySide6"
 # Meetup #PythonCDMX <i class="fab fa-python"></i> - Marzo 2025
 
 <div class="meetup-hero">
-    <h1>✨ Agentes de IA / PySide6 ✨</h1>
+    <h1>Agentes de IA / PySide6</h1>
     <p class="meetup-subtitle">Dos charlas sobre IA y interfaces gráficas</p>
 </div>
 
@@ -147,9 +147,6 @@ title: "Agentes de IA / PySide6"
                 allowfullscreen>
             ></iframe>
         </div>
-        <a href="https://www.youtube.com/watch?v=ebeqlVkhKNs" class="youtube-btn">
-            <i class="fab fa-youtube"></i> Ver en YouTube
-        </a>
     </div>
 </div>
 ---
