--- a/docs/meetups/2025/202504-abril.md
+++ b/docs/meetups/2025/202504-abril.md
@@ -5,7 +5,7 @@ title: "Kubernetes y IA"
 # Meetup #PythonCDMX <i class="fab fa-python"></i> - Abril 2025
 
 <div class="meetup-hero">
-    <h1>✨ Kubernetes y IA ✨</h1>
+    <h1>Kubernetes y IA</h1>
     <p class="meetup-subtitle">Desplegando modelos de IA en Kubernetes</p>
 </div>
 
@@ -85,9 +85,6 @@ title: "Kubernetes y IA"
                 allowfullscreen>
             ></iframe>
         </div>
-        <a href="https://www.youtube.com/watch?v=ebeqlVkhKNs" class="youtube-btn">
-            <i class="fab fa-youtube"></i> Ver en YouTube
-        </a>
     </div>
 </div>
 ---
