--- a/docs/meetups/2025/202504-unam.md
+++ b/docs/meetups/2025/202504-unam.md
@@ -5,7 +5,7 @@ title: "¡Extra! Sudo Ciencias en la UNAM"
 # Meetup #PythonCDMX <i class="fab fa-python"></i> - Abril 2025
 
 <div class="meetup-hero">
-    <h1>✨ ¡Extra! Sudo Ciencias en la UNAM ✨</h1>
+    <h1>¡Extra! Sudo Ciencias en la UNAM</h1>
     <p class="meetup-subtitle">Evento especial con Sudo Ciencias</p>
 </div>
 
@@ -147,9 +147,6 @@ title: "¡Extra! Sudo Ciencias en la UNAM"
                 allowfullscreen>
             ></iframe>
         </div>
-        <a href="https://www.youtube.com/watch?v=J_Sggoh1uSY" class="youtube-btn">
-            <i class="fab fa-youtube"></i> Ver en YouTube
-        </a>
     </div>
 </div>
 
