--- a/docs/meetups/2025/202507-julio.md
+++ b/docs/meetups/2025/202507-julio.md
@@ -5,7 +5,7 @@ title: "Cómo preparar una ambiente de desarrollo con Python desde zero"
 # Meetup #PythonCDMX <i class="fab fa-python"></i> - Julio 2025
 
 <div class="meetup-hero">
-    <h1>✨ Cómo preparar una ambiente de desarrollo con Python desde zero ✨</h1>
+    <h1>Cómo preparar una ambiente de desarrollo con Python desde zero</h1>
     <p class="meetup-subtitle">Descubre las mejores prácticas para configurar tu entorno de desarrollo Python</p>
 </div>
 
@@ -99,9 +99,6 @@ title: "Cómo preparar una ambiente de desarrollo con Python desde zero"
                 allowfullscreen>
             ></iframe>
         </div>
-        <a href="https://www.youtube.com/watch?v=hSaZXuY30zI" class="youtube-btn">
-            <i class="fab fa-youtube"></i> Ver en YouTube
-        </a>
     </div>
 </div>
 
