Feat/new style (#12)
Rediseño completo del sistema de estilos y reorganización de la documentación del proyecto Python CDMX. Se implementa una **arquitectura variables-first** con 18+ variables CSS centralizadas y se crea una guía completa de sistema de diseño como fuente única de verdad.
---------

Co-authored-by: pixelead0 <info@pixelead0.com>

--- a/docs/meetups/2024/202408-agosto.md
+++ b/docs/meetups/2024/202408-agosto.md
@@ -5,7 +5,7 @@ title: "Protocolos en Python / Convertirse en Contribuidor Open Source"
 # Meetup #PythonCDMX <i class="fab fa-python"></i> - Agosto 2024
 
 <div class="meetup-hero">
-    <h1>✨ Protocolos en Python / Convertirse en Contribuidor Open Source ✨</h1>
+    <h1>Protocolos en Python / Convertirse en Contribuidor Open Source</h1>
     <p class="meetup-subtitle">Dos charlas sobre tipado estático y contribución open source</p>
 </div>
 
@@ -30,7 +30,7 @@ title: "Protocolos en Python / Convertirse en Contribuidor Open Source"
     </div>
     <div class="detail-card rsvp-card">
         <h3><i class="fas fa-ticket-alt"></i> RSVP</h3>
-        <p><a href="https://www.meetup.com/python-mexico/" style="color: #ffc107; text-decoration: none;">¡Regístrate aquí!</a></p>
+        <p><a href="https://www.meetup.com/python-mexico/">¡Regístrate aquí!</a></p>
     </div>
 </div>
 
@@ -39,19 +39,19 @@ title: "Protocolos en Python / Convertirse en Contribuidor Open Source"
 ## Charlas y Ponentes
 
 
-<div class="talk-section" style="margin: 3rem 0; border: 2px solid #e9ecef; border-radius: 16px; overflow: hidden;">
-    <div class="talk-header" style="background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); color: white; padding: 1.5rem; text-align: center;">
-        <h3 style="margin: 0 0 0.5rem 0; font-size: 1.8rem;"><i class="fas fa-rocket"></i> Protocolos en Python: El poder del tipado estático avanzado</h3>
-        <p style="margin: 0; opacity: 0.9;"><i class="fas fa-stopwatch"></i> 45 minutos</p>
+<div class="talk-section">
+    <div class="talk-header">
+        <h3><i class="fas fa-rocket"></i> Protocolos en Python: El poder del tipado estático avanzado</h3>
+        <p><i class="fas fa-stopwatch"></i> 45 minutos</p>
     </div>
-    <div class="speaker-section" style="background: linear-gradient(135deg, #f8f9fa 0%, #e9ecef 100%); padding: 2rem; display: flex; align-items: center; gap: 2rem;">
-        <div class="speaker-photo" style="flex-shrink: 0;">
-            <img src="/../../images/ponentes/ponentePythonCDMX.jpg" alt="Gustavo Vera" style="width: 120px; height: 120px; border-radius: 50%; border: 4px solid white; box-shadow: 0 4px 16px rgba(0,0,0,0.2); object-fit: cover;">
+    <div class="speaker-section">
+        <div class="speaker-photo">
+            <img src="/../../images/ponentes/ponentePythonCDMX.jpg" alt="Gustavo Vera">
         </div>
         <div class="speaker-info">
-            <h4 style="margin: 0 0 0.5rem 0; font-size: 1.5rem; color: #333;">Gustavo Vera</h4>
-            <p style="margin: 0 0 1rem 0; font-size: 1rem; color: #666;">Python Developer</p>
-            <p style="margin: 0 0 1rem 0; line-height: 1.6; color: #555;">Desarrollador Python con experiencia en tipado estático y mejores prácticas de desarrollo.</p>
+            <h4>Gustavo Vera</h4>
+            <p>Python Developer</p>
+            <p>Desarrollador Python con experiencia en tipado estático y mejores prácticas de desarrollo.</p>
             <div class="speaker-links">
                 
                 
@@ -59,45 +59,45 @@ title: "Protocolos en Python / Convertirse en Contribuidor Open Source"
             </div>
         </div>
     </div>
-    <div class="talk-description" style="background: white; padding: 2rem; border-left: 6px solid #28a745;">
-        <p style="line-height: 1.8; font-size: 1.1rem; margin-bottom: 1.5rem; color: #333;">Descubre cómo los Protocolos en Python pueden transformar tu código, haciéndolo más flexible y robusto. Explora desde conceptos básicos hasta aplicaciones avanzadas en esta plática única.</p>
+    <div class="talk-description">
+        <p>Descubre cómo los Protocolos en Python pueden transformar tu código, haciéndolo más flexible y robusto. Explora desde conceptos básicos hasta aplicaciones avanzadas en esta plática única.</p>
         
-        <div class="tech-stack" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(180px, 1fr)); gap: 1rem; margin: 1.5rem 0;">
+        <div class="tech-stack">
             
-            <div style="background: #f8f9fa; padding: 1rem; border-radius: 8px; text-align: center; box-shadow: 0 2px 4px rgba(0,0,0,0.1); border-left: 3px solid #007bff;">
-                <h5 style="margin: 0 0 0.5rem 0; color: #007bff; font-size: 1rem;"><i class="fas fa-clipboard-list"></i> Protocols</h5>
-                <p style="margin: 0; font-size: 0.85rem; color: #666;">Tipado estático</p>
+            <div>
+                <h5><i class="fas fa-clipboard-list"></i> Protocols</h5>
+                <p>Tipado estático</p>
             </div>
             
-            <div style="background: #f8f9fa; padding: 1rem; border-radius: 8px; text-align: center; box-shadow: 0 2px 4px rgba(0,0,0,0.1); border-left: 3px solid #28a745;">
-                <h5 style="margin: 0 0 0.5rem 0; color: #28a745; font-size: 1rem;"><i class="fas fa-tag"></i> Type Hints</h5>
-                <p style="margin: 0; font-size: 0.85rem; color: #666;">Anotaciones de tipo</p>
+            <div>
+                <h5><i class="fas fa-tag"></i> Type Hints</h5>
+                <p>Anotaciones de tipo</p>
             </div>
             
-            <div style="background: #f8f9fa; padding: 1rem; border-radius: 8px; text-align: center; box-shadow: 0 2px 4px rgba(0,0,0,0.1); border-left: 3px solid #ffc107;">
-                <h5 style="margin: 0 0 0.5rem 0; color: #ffc107; font-size: 1rem;"><i class="fas fa-search"></i> Static Typing</h5>
-                <p style="margin: 0; font-size: 0.85rem; color: #666;">Tipado estático</p>
+            <div>
+                <h5><i class="fas fa-search"></i> Static Typing</h5>
+                <p>Tipado estático</p>
             </div>
             
         </div>
         
-        <p style="line-height: 1.8; font-size: 1.1rem; margin-top: 1.5rem; color: #333; font-style: italic;">Los Protocolos en Python ofrecen una forma poderosa de implementar tipado estático avanzado.</p>
+        <p>Los Protocolos en Python ofrecen una forma poderosa de implementar tipado estático avanzado.</p>
     </div>
 </div>
 
-<div class="talk-section" style="margin: 3rem 0; border: 2px solid #e9ecef; border-radius: 16px; overflow: hidden;">
-    <div class="talk-header" style="background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); color: white; padding: 1.5rem; text-align: center;">
-        <h3 style="margin: 0 0 0.5rem 0; font-size: 1.8rem;"><i class="fas fa-rocket"></i> Guía Práctica para Convertirse en Contribuidor de Open Source en 10 Años (o más)</h3>
-        <p style="margin: 0; opacity: 0.9;"><i class="fas fa-stopwatch"></i> 45 minutos</p>
+<div class="talk-section">
+    <div class="talk-header">
+        <h3><i class="fas fa-rocket"></i> Guía Práctica para Convertirse en Contribuidor de Open Source en 10 Años (o más)</h3>
+        <p><i class="fas fa-stopwatch"></i> 45 minutos</p>
     </div>
-    <div class="speaker-section" style="background: linear-gradient(135deg, #f8f9fa 0%, #e9ecef 100%); padding: 2rem; display: flex; align-items: center; gap: 2rem;">
-        <div class="speaker-photo" style="flex-shrink: 0;">
-            <img src="/../../images/ponentes/ponentePythonCDMX.jpg" alt="Fer Perales" style="width: 120px; height: 120px; border-radius: 50%; border: 4px solid white; box-shadow: 0 4px 16px rgba(0,0,0,0.2); object-fit: cover;">
+    <div class="speaker-section">
+        <div class="speaker-photo">
+            <img src="/../../images/ponentes/ponentePythonCDMX.jpg" alt="Fer Perales">
         </div>
         <div class="speaker-info">
-            <h4 style="margin: 0 0 0.5rem 0; font-size: 1.5rem; color: #333;">Fer Perales</h4>
-            <p style="margin: 0 0 1rem 0; font-size: 1rem; color: #666;">Open Source Contributor</p>
-            <p style="margin: 0 0 1rem 0; line-height: 1.6; color: #555;">Contribuidor activo al ecosistema de Ruby con más de 10 años de experiencia en open source.</p>
+            <h4>Fer Perales</h4>
+            <p>Open Source Contributor</p>
+            <p>Contribuidor activo al ecosistema de Ruby con más de 10 años de experiencia en open source.</p>
             <div class="speaker-links">
                 
                 
@@ -105,29 +105,29 @@ title: "Protocolos en Python / Convertirse en Contribuidor Open Source"
             </div>
         </div>
     </div>
-    <div class="talk-description" style="background: white; padding: 2rem; border-left: 6px solid #28a745;">
-        <p style="line-height: 1.8; font-size: 1.1rem; margin-bottom: 1.5rem; color: #333;">En una era donde todo mundo buscamos la satisfacción y los resultados inmediatos, compartiré mi camino de 10 años en el ecosistema de Ruby en el que me he convertido de usuario del lenguaje a contribuidor frecuente en una empresa con más de 1,000 millones de descargas de bibliotecas de Ruby. Los días son largos, pero los años son cortos y, si 10 años no son suficientes para convertirte en contribuidor de Open Source, siempre puedes tomar un año más y repetir el proceso.</p>
+    <div class="talk-description">
+        <p>En una era donde todo mundo buscamos la satisfacción y los resultados inmediatos, compartiré mi camino de 10 años en el ecosistema de Ruby en el que me he convertido de usuario del lenguaje a contribuidor frecuente en una empresa con más de 1,000 millones de descargas de bibliotecas de Ruby. Los días son largos, pero los años son cortos y, si 10 años no son suficientes para convertirte en contribuidor de Open Source, siempre puedes tomar un año más y repetir el proceso.</p>
         
-        <div class="tech-stack" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(180px, 1fr)); gap: 1rem; margin: 1.5rem 0;">
+        <div class="tech-stack">
             
-            <div style="background: #f8f9fa; padding: 1rem; border-radius: 8px; text-align: center; box-shadow: 0 2px 4px rgba(0,0,0,0.1); border-left: 3px solid #28a745;">
-                <h5 style="margin: 0 0 0.5rem 0; color: #28a745; font-size: 1rem;"><i class="fas fa-unlock"></i> Open Source</h5>
-                <p style="margin: 0; font-size: 0.85rem; color: #666;">Software libre</p>
+            <div>
+                <h5><i class="fas fa-unlock"></i> Open Source</h5>
+                <p>Software libre</p>
             </div>
             
-            <div style="background: #f8f9fa; padding: 1rem; border-radius: 8px; text-align: center; box-shadow: 0 2px 4px rgba(0,0,0,0.1); border-left: 3px solid #CC342D;">
-                <h5 style="margin: 0 0 0.5rem 0; color: #CC342D; font-size: 1rem;"><i class="fas fa-gem"></i> Ruby</h5>
-                <p style="margin: 0; font-size: 0.85rem; color: #666;">Lenguaje de programación</p>
+            <div>
+                <h5><i class="fas fa-gem"></i> Ruby</h5>
+                <p>Lenguaje de programación</p>
             </div>
             
-            <div style="background: #f8f9fa; padding: 1rem; border-radius: 8px; text-align: center; box-shadow: 0 2px 4px rgba(0,0,0,0.1); border-left: 3px solid #17a2b8;">
-                <h5 style="margin: 0 0 0.5rem 0; color: #17a2b8; font-size: 1rem;"><i class="fas fa-users"></i> Community</h5>
-                <p style="margin: 0; font-size: 0.85rem; color: #666;">Comunidad</p>
+            <div>
+                <h5><i class="fas fa-users"></i> Community</h5>
+                <p>Comunidad</p>
             </div>
             
         </div>
         
-        <p style="line-height: 1.8; font-size: 1.1rem; margin-top: 1.5rem; color: #333; font-style: italic;">Contribuir al open source es un viaje de largo plazo que requiere paciencia y dedicación.</p>
+        <p>Contribuir al open source es un viaje de largo plazo que requiere paciencia y dedicación.</p>
     </div>
 </div>
 
@@ -147,43 +147,16 @@ title: "Protocolos en Python / Convertirse en Contribuidor Open Source"
                 allowfullscreen>
             ></iframe>
         </div>
-        <a href="https://www.youtube.com/watch?v=97NmGheUxmE" class="youtube-btn">
-            <i class="fab fa-youtube"></i> Ver en YouTube
-        </a>
     </div>
 </div>
----
-
-
-### Unete a #PythonCDMX
-
-<div class="community-links">
-    
-        <a href="https://t.me/PythonCDMX" class="community-link telegram">
-            <i class="fab fa-telegram"></i> Telegram
-        </a>
-        <a href="https://www.meetup.com/python-mexico" class="community-link meetup">
-            <i class="fab fa-meetup"></i> Meetup
-        </a>
-        <a href="https://www.youtube.com/@PythonMexico" class="community-link youtube">
-            <i class="fab fa-youtube"></i> YouTube
-        </a>
-        <a href="https://github.com/PythonMexico/pythonCDMX" class="community-link github">
-            <i class="fab fa-github"></i> GitHub
-        </a>
-        <a href="https://www.instagram.com/pythoncdmx" class="community-link instagram">
-            <i class="fab fa-instagram"></i> Instagram
-        </a>
-        <a href="https://www.linkedin.com/company/pythoncdmx" class="community-link linkedin">
-            <i class="fab fa-linkedin"></i> LinkedIn
-        </a>
-    
-</div>
 
 ---
 
-<div style="text-align: center; margin-top: 3rem; padding: 2rem; background: #f8f9fa; border-radius: 12px;">
-    <p style="margin: 0; color: #6c757d; font-style: italic;">
-        *Última actualización: Generado automáticamente*
-    </p>
-</div>
+--8<-- "components/community-links.md"
+
+---
+
+--8<-- "components/quick-navigation.md"
+
+---
+
