--- a/docs/meetups/2025/202503-marzo.md
+++ b/docs/meetups/2025/202503-marzo.md
@@ -5,7 +5,7 @@ title: "Agentes de IA / PySide6"
 # Meetup #PythonCDMX <i class="fab fa-python"></i> - Marzo 2025
 
 <div class="meetup-hero">
-    <h1>✨ Agentes de IA / PySide6 ✨</h1>
+    <h1>Agentes de IA / PySide6</h1>
     <p class="meetup-subtitle">Dos charlas sobre IA y interfaces gráficas</p>
 </div>
 
@@ -30,7 +30,7 @@ title: "Agentes de IA / PySide6"
     </div>
     <div class="detail-card rsvp-card">
         <h3><i class="fas fa-ticket-alt"></i> RSVP</h3>
-        <p><a href="https://www.meetup.com/python-mexico/" style="color: #ffc107; text-decoration: none;">¡Regístrate aquí!</a></p>
+        <p><a href="https://www.meetup.com/python-mexico/">¡Regístrate aquí!</a></p>
     </div>
 </div>
 
@@ -39,19 +39,19 @@ title: "Agentes de IA / PySide6"
 ## Charlas y Ponentes
 
 
-<div class="talk-section" style="margin: 3rem 0; border: 2px solid #e9ecef; border-radius: 16px; overflow: hidden;">
-    <div class="talk-header" style="background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); color: white; padding: 1.5rem; text-align: center;">
-        <h3 style="margin: 0 0 0.5rem 0; font-size: 1.8rem;"><i class="fas fa-rocket"></i> Mi Primer Agente de Inteligencia Artificial con Python</h3>
-        <p style="margin: 0; opacity: 0.9;"><i class="fas fa-stopwatch"></i> 45 minutos</p>
+<div class="talk-section">
+    <div class="talk-header">
+        <h3><i class="fas fa-rocket"></i> Mi Primer Agente de Inteligencia Artificial con Python</h3>
+        <p><i class="fas fa-stopwatch"></i> 45 minutos</p>
     </div>
-    <div class="speaker-section" style="background: linear-gradient(135deg, #f8f9fa 0%, #e9ecef 100%); padding: 2rem; display: flex; align-items: center; gap: 2rem;">
-        <div class="speaker-photo" style="flex-shrink: 0;">
-            <img src="/../../images/ponentes/202503-PythonCDMX-erick-rivera.jpg" alt="Erik Rivera" style="width: 120px; height: 120px; border-radius: 50%; border: 4px solid white; box-shadow: 0 4px 16px rgba(0,0,0,0.2); object-fit: cover;">
+    <div class="speaker-section">
+        <div class="speaker-photo">
+            <img src="/../../images/ponentes/202503-PythonCDMX-erick-rivera.jpg" alt="Erik Rivera">
         </div>
         <div class="speaker-info">
-            <h4 style="margin: 0 0 0.5rem 0; font-size: 1.5rem; color: #333;">Erik Rivera</h4>
-            <p style="margin: 0 0 1rem 0; font-size: 1rem; color: #666;">AI Engineer</p>
-            <p style="margin: 0 0 1rem 0; line-height: 1.6; color: #555;">Especialista en desarrollo de agentes de IA y machine learning con experiencia en LangGraph y LLMs.</p>
+            <h4>Erik Rivera</h4>
+            <p>AI Engineer</p>
+            <p>Especialista en desarrollo de agentes de IA y machine learning con experiencia en LangGraph y LLMs.</p>
             <div class="speaker-links">
                 
                 
@@ -59,45 +59,45 @@ title: "Agentes de IA / PySide6"
             </div>
         </div>
     </div>
-    <div class="talk-description" style="background: white; padding: 2rem; border-left: 6px solid #28a745;">
-        <p style="line-height: 1.8; font-size: 1.1rem; margin-bottom: 1.5rem; color: #333;">Introducción práctica al desarrollo de agentes de IA usando Python, enfocada en implementaciones con LangGraph y herramientas open source. Los participantes aprenderán conceptos fundamentales de LLMs y cómo crear agentes inteligentes que puedan realizar tareas autónomas.</p>
+    <div class="talk-description">
+        <p>Introducción práctica al desarrollo de agentes de IA usando Python, enfocada en implementaciones con LangGraph y herramientas open source. Los participantes aprenderán conceptos fundamentales de LLMs y cómo crear agentes inteligentes que puedan realizar tareas autónomas.</p>
         
-        <div class="tech-stack" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(180px, 1fr)); gap: 1rem; margin: 1.5rem 0;">
+        <div class="tech-stack">
             
-            <div style="background: #f8f9fa; padding: 1rem; border-radius: 8px; text-align: center; box-shadow: 0 2px 4px rgba(0,0,0,0.1); border-left: 3px solid #007bff;">
-                <h5 style="margin: 0 0 0.5rem 0; color: #007bff; font-size: 1rem;"><i class="fas fa-robot"></i> LangGraph</h5>
-                <p style="margin: 0; font-size: 0.85rem; color: #666;">Framework para agentes</p>
+            <div>
+                <h5><i class="fas fa-robot"></i> LangGraph</h5>
+                <p>Framework para agentes</p>
             </div>
             
-            <div style="background: #f8f9fa; padding: 1rem; border-radius: 8px; text-align: center; box-shadow: 0 2px 4px rgba(0,0,0,0.1); border-left: 3px solid #28a745;">
-                <h5 style="margin: 0 0 0.5rem 0; color: #28a745; font-size: 1rem;"><i class="fas fa-brain"></i> LLMs</h5>
-                <p style="margin: 0; font-size: 0.85rem; color: #666;">Large Language Models</p>
+            <div>
+                <h5><i class="fas fa-brain"></i> LLMs</h5>
+                <p>Large Language Models</p>
             </div>
             
-            <div style="background: #f8f9fa; padding: 1rem; border-radius: 8px; text-align: center; box-shadow: 0 2px 4px rgba(0,0,0,0.1); border-left: 3px solid #10a37f;">
-                <h5 style="margin: 0 0 0.5rem 0; color: #10a37f; font-size: 1rem;"><i class="fas fa-magic"></i> OpenAI</h5>
-                <p style="margin: 0; font-size: 0.85rem; color: #666;">API de IA</p>
+            <div>
+                <h5><i class="fas fa-magic"></i> OpenAI</h5>
+                <p>API de IA</p>
             </div>
             
         </div>
         
-        <p style="line-height: 1.8; font-size: 1.1rem; margin-top: 1.5rem; color: #333; font-style: italic;">Los agentes de IA representan el futuro del desarrollo de aplicaciones inteligentes y autónomas.</p>
+        <p>Los agentes de IA representan el futuro del desarrollo de aplicaciones inteligentes y autónomas.</p>
     </div>
 </div>
 
-<div class="talk-section" style="margin: 3rem 0; border: 2px solid #e9ecef; border-radius: 16px; overflow: hidden;">
-    <div class="talk-header" style="background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); color: white; padding: 1.5rem; text-align: center;">
-        <h3 style="margin: 0 0 0.5rem 0; font-size: 1.8rem;"><i class="fas fa-rocket"></i> Interfaces gráficas con PySide6</h3>
-        <p style="margin: 0; opacity: 0.9;"><i class="fas fa-stopwatch"></i> 45 minutos</p>
+<div class="talk-section">
+    <div class="talk-header">
+        <h3><i class="fas fa-rocket"></i> Interfaces gráficas con PySide6</h3>
+        <p><i class="fas fa-stopwatch"></i> 45 minutos</p>
     </div>
-    <div class="speaker-section" style="background: linear-gradient(135deg, #f8f9fa 0%, #e9ecef 100%); padding: 2rem; display: flex; align-items: center; gap: 2rem;">
-        <div class="speaker-photo" style="flex-shrink: 0;">
-            <img src="/../../images/ponentes/202503-PythonCDMX-david-sol.jpg" alt="David Sol" style="width: 120px; height: 120px; border-radius: 50%; border: 4px solid white; box-shadow: 0 4px 16px rgba(0,0,0,0.2); object-fit: cover;">
+    <div class="speaker-section">
+        <div class="speaker-photo">
+            <img src="/../../images/ponentes/202503-PythonCDMX-david-sol.jpg" alt="David Sol">
         </div>
         <div class="speaker-info">
-            <h4 style="margin: 0 0 0.5rem 0; font-size: 1.5rem; color: #333;">David Sol</h4>
-            <p style="margin: 0 0 1rem 0; font-size: 1rem; color: #666;">SRE Engineer</p>
-            <p style="margin: 0 0 1rem 0; line-height: 1.6; color: #555;">David Sol creció en el siglo XX, y en su infancia sus padres le dejaban salir a la calle, sin supervisión, a jugar con quién encontrara y a lo que pudiera, con la única condición de que regresara para dormir. Una bicicleta bastaba para recorrer toda su colonia, sin importar carros, perros o baches. Tomaba agua de mangueras de vecinos, y comía lo que encontrara en sus aventuras. Sufrió cortadas, quemaduras, moretones y un hueso roto, los cuales trató a base de tierra fresca, agua y un par de curitas. Tuvo una infancia feliz. Actualmente labora como SRE en Wizeline.</p>
+            <h4>David Sol</h4>
+            <p>SRE Engineer</p>
+            <p>David Sol creció en el siglo XX, y en su infancia sus padres le dejaban salir a la calle, sin supervisión, a jugar con quién encontrara y a lo que pudiera, con la única condición de que regresara para dormir. Una bicicleta bastaba para recorrer toda su colonia, sin importar carros, perros o baches. Tomaba agua de mangueras de vecinos, y comía lo que encontrara en sus aventuras. Sufrió cortadas, quemaduras, moretones y un hueso roto, los cuales trató a base de tierra fresca, agua y un par de curitas. Tuvo una infancia feliz. Actualmente labora como SRE en Wizeline.</p>
             <div class="speaker-links">
                 
                 
@@ -105,29 +105,29 @@ title: "Agentes de IA / PySide6"
             </div>
         </div>
     </div>
-    <div class="talk-description" style="background: white; padding: 2rem; border-left: 6px solid #28a745;">
-        <p style="line-height: 1.8; font-size: 1.1rem; margin-bottom: 1.5rem; color: #333;">¿Ya te cansaste de la consola? ¿Quieres hacer una aplicación con interfaz gráfica fuera del navegador, cómo en los buenos tiempos? Sí, lo puedes hacer con Python, con facilidad, elegancia y desempeño. PySide6 es la librería oficial para utilizar QT desde Python. Sí, utiliza Python. Sí, es fácil de aprender y utilizar. Sí, corre en Linux, MacOS e incluso en Windows. ¡Ven a conocerla!</p>
+    <div class="talk-description">
+        <p>¿Ya te cansaste de la consola? ¿Quieres hacer una aplicación con interfaz gráfica fuera del navegador, cómo en los buenos tiempos? Sí, lo puedes hacer con Python, con facilidad, elegancia y desempeño. PySide6 es la librería oficial para utilizar QT desde Python. Sí, utiliza Python. Sí, es fácil de aprender y utilizar. Sí, corre en Linux, MacOS e incluso en Windows. ¡Ven a conocerla!</p>
         
-        <div class="tech-stack" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(180px, 1fr)); gap: 1rem; margin: 1.5rem 0;">
+        <div class="tech-stack">
             
-            <div style="background: #f8f9fa; padding: 1rem; border-radius: 8px; text-align: center; box-shadow: 0 2px 4px rgba(0,0,0,0.1); border-left: 3px solid #41CD52;">
-                <h5 style="margin: 0 0 0.5rem 0; color: #41CD52; font-size: 1rem;"><i class="fas fa-desktop"></i> PySide6</h5>
-                <p style="margin: 0; font-size: 0.85rem; color: #666;">Qt para Python</p>
+            <div>
+                <h5><i class="fas fa-desktop"></i> PySide6</h5>
+                <p>Qt para Python</p>
             </div>
             
-            <div style="background: #f8f9fa; padding: 1rem; border-radius: 8px; text-align: center; box-shadow: 0 2px 4px rgba(0,0,0,0.1); border-left: 3px solid #41CD52;">
-                <h5 style="margin: 0 0 0.5rem 0; color: #41CD52; font-size: 1rem;"><i class="fas fa-palette"></i> Qt</h5>
-                <p style="margin: 0; font-size: 0.85rem; color: #666;">Framework GUI</p>
+            <div>
+                <h5><i class="fas fa-palette"></i> Qt</h5>
+                <p>Framework GUI</p>
             </div>
             
-            <div style="background: #f8f9fa; padding: 1rem; border-radius: 8px; text-align: center; box-shadow: 0 2px 4px rgba(0,0,0,0.1); border-left: 3px solid #6c757d;">
-                <h5 style="margin: 0 0 0.5rem 0; color: #6c757d; font-size: 1rem;"><i class="fas fa-laptop"></i> Desktop Apps</h5>
-                <p style="margin: 0; font-size: 0.85rem; color: #666;">Aplicaciones de escritorio</p>
+            <div>
+                <h5><i class="fas fa-laptop"></i> Desktop Apps</h5>
+                <p>Aplicaciones de escritorio</p>
             </div>
             
         </div>
         
-        <p style="line-height: 1.8; font-size: 1.1rem; margin-top: 1.5rem; color: #333; font-style: italic;">PySide6 permite crear aplicaciones de escritorio profesionales con Python de manera sencilla y eficiente.</p>
+        <p>PySide6 permite crear aplicaciones de escritorio profesionales con Python de manera sencilla y eficiente.</p>
     </div>
 </div>
 
@@ -147,43 +147,14 @@ title: "Agentes de IA / PySide6"
                 allowfullscreen>
             ></iframe>
         </div>
-        <a href="https://www.youtube.com/watch?v=ebeqlVkhKNs" class="youtube-btn">
-            <i class="fab fa-youtube"></i> Ver en YouTube
-        </a>
     </div>
 </div>
 ---
 
-
-### Unete a #PythonCDMX
-
-<div class="community-links">
-    
-        <a href="https://t.me/PythonCDMX" class="community-link telegram">
-            <i class="fab fa-telegram"></i> Telegram
-        </a>
-        <a href="https://www.meetup.com/python-mexico" class="community-link meetup">
-            <i class="fab fa-meetup"></i> Meetup
-        </a>
-        <a href="https://www.youtube.com/@PythonMexico" class="community-link youtube">
-            <i class="fab fa-youtube"></i> YouTube
-        </a>
-        <a href="https://github.com/PythonMexico/pythonCDMX" class="community-link github">
-            <i class="fab fa-github"></i> GitHub
-        </a>
-        <a href="https://www.instagram.com/pythoncdmx" class="community-link instagram">
-            <i class="fab fa-instagram"></i> Instagram
-        </a>
-        <a href="https://www.linkedin.com/company/pythoncdmx" class="community-link linkedin">
-            <i class="fab fa-linkedin"></i> LinkedIn
-        </a>
-    
-</div>
+--8<-- "components/community-links.md"
 
 ---
 
-<div style="text-align: center; margin-top: 3rem; padding: 2rem; background: #f8f9fa; border-radius: 12px;">
-    <p style="margin: 0; color: #6c757d; font-style: italic;">
-        *Última actualización: Generado automáticamente*
-    </p>
-</div>
+--8<-- "components/quick-navigation.md"
+
+---
