--- a/docs/meetups/2025/202507-julio.md
+++ b/docs/meetups/2025/202507-julio.md
@@ -5,7 +5,7 @@ title: "Cómo preparar una ambiente de desarrollo con Python desde zero"
 # Meetup #PythonCDMX <i class="fab fa-python"></i> - Julio 2025
 
 <div class="meetup-hero">
-    <h1>✨ Cómo preparar una ambiente de desarrollo con Python desde zero ✨</h1>
+    <h1>Cómo preparar una ambiente de desarrollo con Python desde zero</h1>
     <p class="meetup-subtitle">Descubre las mejores prácticas para configurar tu entorno de desarrollo Python</p>
 </div>
 
@@ -30,7 +30,7 @@ title: "Cómo preparar una ambiente de desarrollo con Python desde zero"
     </div>
     <div class="detail-card rsvp-card">
         <h3><i class="fas fa-ticket-alt"></i> RSVP</h3>
-        <p><a href="https://www.meetup.com/python-mexico/" style="color: #ffc107; text-decoration: none;">¡Regístrate aquí!</a></p>
+        <p><a href="https://www.meetup.com/python-mexico/">¡Regístrate aquí!</a></p>
     </div>
 </div>
 
@@ -62,7 +62,7 @@ title: "Cómo preparar una ambiente de desarrollo con Python desde zero"
     <h3><i class="fas fa-rocket"></i> Cómo preparar una ambiente de desarrollo con Python desde zero</h3>
     <p>¿Tienes esa gran idea, pero no sabes cómo organizar tu ambiente virtual, tu código y todas las herramientas de desarrollo?</p>
     <p>En esta charla exploraremos las mejores prácticas para configurar un entorno de desarrollo Python profesional:</p>
-    <ul style="line-height: 1.8; font-size: 1.1rem; margin: 1.5rem 0; padding-left: 2rem;">
+    <ul>
         
             <li>¿Debes usar UV para el ambiente virtual?</li>
         
@@ -79,7 +79,7 @@ title: "Cómo preparar una ambiente de desarrollo con Python desde zero"
             <li>Y lo más controvertido de todo: ¿Tabulador o espacios?</li>
         
     </ul>
-    <p style="line-height: 1.8; font-size: 1.1rem; margin-top: 1.5rem; font-style: italic; color: #666;">
+    <p>
         <i class="fas fa-info-circle"></i> Nota: Basado en la página "Modern Good Practices for Python Development" de Stuart Ellis. Igual hay que preguntarle si se anima a darla él.
     </p>
 </div>
@@ -99,41 +99,15 @@ title: "Cómo preparar una ambiente de desarrollo con Python desde zero"
                 allowfullscreen>
             ></iframe>
         </div>
-        <a href="https://www.youtube.com/watch?v=hSaZXuY30zI" class="youtube-btn">
-            <i class="fab fa-youtube"></i> Ver en YouTube
-        </a>
     </div>
 </div>
 
 ---
 
-### Unete a #PythonCDMX
-
-<div class="community-links">
-    <a href="https://t.me/PythonCDMX" class="community-link telegram">
-        <i class="fab fa-telegram"></i> Telegram
-    </a>
-    <a href="https://www.meetup.com/python-mexico" class="community-link meetup">
-        <i class="fab fa-meetup"></i> Meetup
-    </a>
-    <a href="https://www.youtube.com/@PythonMexico" class="community-link youtube">
-        <i class="fab fa-youtube"></i> YouTube
-    </a>
-    <a href="https://github.com/PythonMexico/pythonCDMX" class="community-link github">
-        <i class="fab fa-github"></i> GitHub
-    </a>
-    <a href="https://www.instagram.com/pythoncdmx" class="community-link instagram">
-        <i class="fab fa-instagram"></i> Instagram
-    </a>
-    <a href="https://www.linkedin.com/company/pythoncdmx" class="community-link linkedin">
-        <i class="fab fa-linkedin"></i> LinkedIn
-    </a>
-</div>
+--8<-- "components/community-links.md"
 
 ---
 
-<div style="text-align: center; margin-top: 3rem; padding: 2rem; background: #f8f9fa; border-radius: 12px;">
-    <p style="margin: 0; color: #6c757d; font-style: italic;">
-        *Última actualización: Generado automáticamente*
-    </p>
-</div>
+--8<-- "components/quick-navigation.md"
+
+---
