--- a/docs/meetups/2025/202501-enero.md
+++ b/docs/meetups/2025/202501-enero.md
@@ -5,7 +5,7 @@ title: "Crea extensiones para LibreOffice / PCI DSS en Python"
 # Meetup #PythonCDMX <i class="fab fa-python"></i> - Enero 2025
 
 <div class="meetup-hero">
-    <h1>✨ Crea extensiones para LibreOffice / PCI DSS en Python ✨</h1>
+    <h1>Crea extensiones para LibreOffice / PCI DSS en Python</h1>
     <p class="meetup-subtitle">Dos charlas sobre LibreOffice y seguridad</p>
 </div>
 
@@ -30,7 +30,7 @@ title: "Crea extensiones para LibreOffice / PCI DSS en Python"
     </div>
     <div class="detail-card rsvp-card">
         <h3><i class="fas fa-ticket-alt"></i> RSVP</h3>
-        <p><a href="https://www.meetup.com/python-mexico/" style="color: #ffc107; text-decoration: none;">¡Regístrate aquí!</a></p>
+        <p><a href="https://www.meetup.com/python-mexico/">¡Regístrate aquí!</a></p>
     </div>
 </div>
 
@@ -38,109 +38,103 @@ title: "Crea extensiones para LibreOffice / PCI DSS en Python"
 
 ## Charlas y Ponentes
 
-
-<div class="talk-section" style="margin: 3rem 0; border: 2px solid #e9ecef; border-radius: 16px; overflow: hidden;">
-    <div class="talk-header" style="background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); color: white; padding: 1.5rem; text-align: center;">
-        <h3 style="margin: 0 0 0.5rem 0; font-size: 1.8rem;"><i class="fas fa-rocket"></i> Creando extensiones para LibreOffice, con Python</h3>
-        <p style="margin: 0; opacity: 0.9;"><i class="fas fa-stopwatch"></i> 45 minutos</p>
+<div class="talk-section">
+    <div class="talk-header">
+        <h3><i class="fas fa-rocket"></i> Creando extensiones para LibreOffice, con Python</h3>
+        <p><i class="fas fa-stopwatch"></i> 45 minutos</p>
     </div>
-    <div class="speaker-section" style="background: linear-gradient(135deg, #f8f9fa 0%, #e9ecef 100%); padding: 2rem; display: flex; align-items: center; gap: 2rem;">
-        <div class="speaker-photo" style="flex-shrink: 0;">
-            <img src="/../../images/ponentes/ponentePythonCDMX.jpg" alt="elMau (Mauricio B.)" style="width: 120px; height: 120px; border-radius: 50%; border: 4px solid white; box-shadow: 0 4px 16px rgba(0,0,0,0.2); object-fit: cover;">
+    <div class="speaker-section">
+        <div class="speaker-photo">
+            <img src="/../../images/ponentes/ponentePythonCDMX.jpg" alt="elMau (Mauricio B.)">
         </div>
         <div class="speaker-info">
-            <h4 style="margin: 0 0 0.5rem 0; font-size: 1.5rem; color: #333;">elMau (Mauricio B.)</h4>
-            <p style="margin: 0 0 1rem 0; font-size: 1rem; color: #666;">Desarrollador LibreOffice</p>
-            <p style="margin: 0 0 1rem 0; line-height: 1.6; color: #555;">Especialista en desarrollo de extensiones para LibreOffice y automatización de oficina.</p>
+            <h4>elMau (Mauricio B.)</h4>
+            <p>Desarrollador LibreOffice</p>
+            <p>Especialista en desarrollo de extensiones para LibreOffice y automatización de oficina.</p>
             <div class="speaker-links">
-                
-                
-                
+
             </div>
         </div>
     </div>
-    <div class="talk-description" style="background: white; padding: 2rem; border-left: 6px solid #28a745;">
-        <p style="line-height: 1.8; font-size: 1.1rem; margin-bottom: 1.5rem; color: #333;">Aprende a potenciar LibreOffice creando extensiones personalizadas con Python. Descubre las herramientas y técnicas para desarrollar complementos que automaticen tareas y añadan nuevas funcionalidades.</p>
-        
-        <div class="tech-stack" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(180px, 1fr)); gap: 1rem; margin: 1.5rem 0;">
-            
-            <div style="background: #f8f9fa; padding: 1rem; border-radius: 8px; text-align: center; box-shadow: 0 2px 4px rgba(0,0,0,0.1); border-left: 3px solid #18A303;">
-                <h5 style="margin: 0 0 0.5rem 0; color: #18A303; font-size: 1rem;"><i class="fas fa-file-alt"></i> LibreOffice</h5>
-                <p style="margin: 0; font-size: 0.85rem; color: #666;">Suite de oficina</p>
+    <div class="talk-description">
+        <p>Aprende a potenciar LibreOffice creando extensiones personalizadas con Python. Descubre las herramientas y técnicas para desarrollar complementos que automaticen tareas y añadan nuevas funcionalidades.</p>
+
+        <div class="tech-stack">
+
+            <div class="tech-item">
+                <h5><i class="fas fa-file-alt"></i> LibreOffice</h5>
+                <p>Suite de oficina</p>
             </div>
-            
-            <div style="background: #f8f9fa; padding: 1rem; border-radius: 8px; text-align: center; box-shadow: 0 2px 4px rgba(0,0,0,0.1); border-left: 3px solid #3776AB;">
-                <h5 style="margin: 0 0 0.5rem 0; color: #3776AB; font-size: 1rem;"><i class="fab fa-python"></i> Python</h5>
-                <p style="margin: 0; font-size: 0.85rem; color: #666;">Lenguaje de scripting</p>
+
+            <div class="tech-item">
+                <h5><i class="fab fa-python"></i> Python</h5>
+                <p>Lenguaje de scripting</p>
             </div>
-            
-            <div style="background: #f8f9fa; padding: 1rem; border-radius: 8px; text-align: center; box-shadow: 0 2px 4px rgba(0,0,0,0.1); border-left: 3px solid #6c757d;">
-                <h5 style="margin: 0 0 0.5rem 0; color: #6c757d; font-size: 1rem;"><i class="fas fa-cog"></i> Automation</h5>
-                <p style="margin: 0; font-size: 0.85rem; color: #666;">Automatización</p>
+
+            <div class="tech-item">
+                <h5><i class="fas fa-cog"></i> Automation</h5>
+                <p>Automatización</p>
             </div>
-            
+
         </div>
-        
-        <p style="line-height: 1.8; font-size: 1.1rem; margin-top: 1.5rem; color: #333; font-style: italic;">Python permite extender LibreOffice de manera poderosa y flexible para automatizar tareas complejas.</p>
+
+        <p>Python permite extender LibreOffice de manera poderosa y flexible para automatizar tareas complejas.</p>
     </div>
 </div>
 
-<div class="talk-section" style="margin: 3rem 0; border: 2px solid #e9ecef; border-radius: 16px; overflow: hidden;">
-    <div class="talk-header" style="background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); color: white; padding: 1.5rem; text-align: center;">
-        <h3 style="margin: 0 0 0.5rem 0; font-size: 1.8rem;"><i class="fas fa-rocket"></i> Seguridad y cumplimiento de Python: Garantizar el cumplimiento de PCI DSS en un entorno Python</h3>
-        <p style="margin: 0; opacity: 0.9;"><i class="fas fa-stopwatch"></i> 45 minutos</p>
+<div class="talk-section">
+    <div class="talk-header">
+        <h3><i class="fas fa-rocket"></i> Seguridad y cumplimiento de Python: Garantizar el cumplimiento de PCI DSS en un entorno Python</h3>
+        <p><i class="fas fa-stopwatch"></i> 45 minutos</p>
     </div>
-    <div class="speaker-section" style="background: linear-gradient(135deg, #f8f9fa 0%, #e9ecef 100%); padding: 2rem; display: flex; align-items: center; gap: 2rem;">
-        <div class="speaker-photo" style="flex-shrink: 0;">
-            <img src="/../../images/ponentes/ponentePythonCDMX.jpg" alt="Mauro Parra" style="width: 120px; height: 120px; border-radius: 50%; border: 4px solid white; box-shadow: 0 4px 16px rgba(0,0,0,0.2); object-fit: cover;">
+    <div class="speaker-section">
+        <div class="speaker-photo">
+            <img src="/../../images/ponentes/ponentePythonCDMX.jpg" alt="Mauro Parra">
         </div>
         <div class="speaker-info">
-            <h4 style="margin: 0 0 0.5rem 0; font-size: 1.5rem; color: #333;">Mauro Parra</h4>
-            <p style="margin: 0 0 1rem 0; font-size: 1rem; color: #666;">Security Engineer</p>
-            <p style="margin: 0 0 1rem 0; line-height: 1.6; color: #555;">Especialista en seguridad informática y cumplimiento normativo con experiencia en PCI DSS y aplicaciones Python.</p>
+            <h4>Mauro Parra</h4>
+            <p>Security Engineer</p>
+            <p>Especialista en seguridad informática y cumplimiento normativo con experiencia en PCI DSS y aplicaciones Python.</p>
             <div class="speaker-links">
-                
-                
-                
+
             </div>
         </div>
     </div>
-    <div class="talk-description" style="background: white; padding: 2rem; border-left: 6px solid #28a745;">
-        <p style="line-height: 1.8; font-size: 1.1rem; margin-bottom: 1.5rem; color: #333;">Platicaremos de alinear las aplicaciones Python con los requisitos de PCI, garantizando controles de seguridad y la preparación para el cumplimiento de la normativa en el manejo de datos. Platicaremos de prácticas de codificación segura, metodologías de cifrado, controles de acceso y otros controles. Tópicos: Introducción básica a PCI, Codificación segura en Python, Cifrado de datos en tránsito y en reposo, incluyendo alternativas de tokenización de datos, Docker images como método para usar código inmutable, Controles de acceso orientados a AWS, Bitácoras seguras de cambios y de información de ejecución.</p>
-        
-        <div class="tech-stack" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(180px, 1fr)); gap: 1rem; margin: 1.5rem 0;">
-            
-            <div style="background: #f8f9fa; padding: 1rem; border-radius: 8px; text-align: center; box-shadow: 0 2px 4px rgba(0,0,0,0.1); border-left: 3px solid #dc3545;">
-                <h5 style="margin: 0 0 0.5rem 0; color: #dc3545; font-size: 1rem;"><i class="fas fa-lock"></i> PCI DSS</h5>
-                <p style="margin: 0; font-size: 0.85rem; color: #666;">Estándar de seguridad</p>
+    <div class="talk-description">
+        <p>Platicaremos de alinear las aplicaciones Python con los requisitos de PCI, garantizando controles de seguridad y la preparación para el cumplimiento de la normativa en el manejo de datos. Platicaremos de prácticas de codificación segura, metodologías de cifrado, controles de acceso y otros controles. Tópicos: Introducción básica a PCI, Codificación segura en Python, Cifrado de datos en tránsito y en reposo, incluyendo alternativas de tokenización de datos, Docker images como método para usar código inmutable, Controles de acceso orientados a AWS, Bitácoras seguras de cambios y de información de ejecución.</p>
+
+        <div class="tech-stack">
+
+            <div class="tech-item">
+                <h5><i class="fas fa-lock"></i> PCI DSS</h5>
+                <p>Estándar de seguridad</p>
             </div>
-            
-            <div style="background: #f8f9fa; padding: 1rem; border-radius: 8px; text-align: center; box-shadow: 0 2px 4px rgba(0,0,0,0.1); border-left: 3px solid #28a745;">
-                <h5 style="margin: 0 0 0.5rem 0; color: #28a745; font-size: 1rem;"><i class="fas fa-shield-alt"></i> Security</h5>
-                <p style="margin: 0; font-size: 0.85rem; color: #666;">Seguridad informática</p>
+
+            <div class="tech-item">
+                <h5><i class="fas fa-shield-alt"></i> Security</h5>
+                <p>Seguridad informática</p>
             </div>
-            
-            <div style="background: #f8f9fa; padding: 1rem; border-radius: 8px; text-align: center; box-shadow: 0 2px 4px rgba(0,0,0,0.1); border-left: 3px solid #2496ED;">
-                <h5 style="margin: 0 0 0.5rem 0; color: #2496ED; font-size: 1rem;"><i class="fab fa-docker"></i> Docker</h5>
-                <p style="margin: 0; font-size: 0.85rem; color: #666;">Contenedores</p>
+
+            <div class="tech-item">
+                <h5><i class="fab fa-docker"></i> Docker</h5>
+                <p>Contenedores</p>
             </div>
-            
-            <div style="background: #f8f9fa; padding: 1rem; border-radius: 8px; text-align: center; box-shadow: 0 2px 4px rgba(0,0,0,0.1); border-left: 3px solid #FF9900;">
-                <h5 style="margin: 0 0 0.5rem 0; color: #FF9900; font-size: 1rem;"><i class="fab fa-aws"></i> AWS</h5>
-                <p style="margin: 0; font-size: 0.85rem; color: #666;">Cloud security</p>
+
+            <div class="tech-item">
+                <h5><i class="fab fa-aws"></i> AWS</h5>
+                <p>Cloud security</p>
             </div>
-            
+
         </div>
-        
-        <p style="line-height: 1.8; font-size: 1.1rem; margin-top: 1.5rem; color: #333; font-style: italic;">La seguridad y el cumplimiento normativo son fundamentales en aplicaciones Python que manejan datos sensibles.</p>
+
+        <p>La seguridad y el cumplimiento normativo son fundamentales en aplicaciones Python que manejan datos sensibles.</p>
     </div>
 </div>
-
 
 ---
 
-
 ## ¡Mira las charlas completas!
+
 <div class="video-section">
     <div class="video-container">
         <div class="video-wrapper">
@@ -152,43 +146,16 @@ title: "Crea extensiones para LibreOffice / PCI DSS en Python"
                 allowfullscreen>
             ></iframe>
         </div>
-        <a href="https://www.youtube.com/watch?v=gOjfq41I8XY" class="youtube-btn">
-            <i class="fab fa-youtube"></i> Ver en YouTube
-        </a>
     </div>
 </div>
----
-
-
-### Unete a #PythonCDMX
-
-<div class="community-links">
-    
-        <a href="https://t.me/PythonCDMX" class="community-link telegram">
-            <i class="fab fa-telegram"></i> Telegram
-        </a>
-        <a href="https://www.meetup.com/python-mexico" class="community-link meetup">
-            <i class="fab fa-meetup"></i> Meetup
-        </a>
-        <a href="https://www.youtube.com/@PythonMexico" class="community-link youtube">
-            <i class="fab fa-youtube"></i> YouTube
-        </a>
-        <a href="https://github.com/PythonMexico/pythonCDMX" class="community-link github">
-            <i class="fab fa-github"></i> GitHub
-        </a>
-        <a href="https://www.instagram.com/pythoncdmx" class="community-link instagram">
-            <i class="fab fa-instagram"></i> Instagram
-        </a>
-        <a href="https://www.linkedin.com/company/pythoncdmx" class="community-link linkedin">
-            <i class="fab fa-linkedin"></i> LinkedIn
-        </a>
-    
-</div>
 
 ---
 
-<div style="text-align: center; margin-top: 3rem; padding: 2rem; background: #f8f9fa; border-radius: 12px;">
-    <p style="margin: 0; color: #6c757d; font-style: italic;">
-        *Última actualización: Generado automáticamente*
-    </p>
-</div>
+--8<-- "components/community-links.md"
+
+---
+
+--8<-- "components/quick-navigation.md"
+
+---
+
