--- a/docs/meetups/2025/202504-unam.md
+++ b/docs/meetups/2025/202504-unam.md
@@ -5,7 +5,7 @@ title: "¡Extra! Sudo Ciencias en la UNAM"
 # Meetup #PythonCDMX <i class="fab fa-python"></i> - Abril 2025
 
 <div class="meetup-hero">
-    <h1>✨ ¡Extra! Sudo Ciencias en la UNAM ✨</h1>
+    <h1>¡Extra! Sudo Ciencias en la UNAM</h1>
     <p class="meetup-subtitle">Evento especial con Sudo Ciencias</p>
 </div>
 
@@ -30,7 +30,7 @@ title: "¡Extra! Sudo Ciencias en la UNAM"
     </div>
     <div class="detail-card rsvp-card">
         <h3><i class="fas fa-ticket-alt"></i> RSVP</h3>
-        <p><a href="https://lu.ma/asib6frc" style="color: #ffc107; text-decoration: none;">¡Regístrate aquí!</a></p>
+        <p><a href="https://lu.ma/asib6frc">¡Regístrate aquí!</a></p>
     </div>
 </div>
 
@@ -39,19 +39,19 @@ title: "¡Extra! Sudo Ciencias en la UNAM"
 ## Charlas y Ponentes
 
 
-<div class="talk-section" style="margin: 3rem 0; border: 2px solid #e9ecef; border-radius: 16px; overflow: hidden;">
-    <div class="talk-header" style="background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); color: white; padding: 1.5rem; text-align: center;">
-        <h3 style="margin: 0 0 0.5rem 0; font-size: 1.8rem;"><i class="fas fa-rocket"></i> portafolio.py: Como hacer un portafolio web sin saber diseño web</h3>
-        <p style="margin: 0; opacity: 0.9;"><i class="fas fa-stopwatch"></i> 30 minutos</p>
+<div class="talk-section">
+    <div class="talk-header">
+        <h3><i class="fas fa-rocket"></i> portafolio.py: Como hacer un portafolio web sin saber diseño web</h3>
+        <p><i class="fas fa-stopwatch"></i> 30 minutos</p>
     </div>
-    <div class="speaker-section" style="background: linear-gradient(135deg, #f8f9fa 0%, #e9ecef 100%); padding: 2rem; display: flex; align-items: center; gap: 2rem;">
-        <div class="speaker-photo" style="flex-shrink: 0;">
-            <img src="/../../images/ponentes/202504-PythonCDMX-Daniel-Paredes.png" alt="Daniel Paredes" style="width: 120px; height: 120px; border-radius: 50%; border: 4px solid white; box-shadow: 0 4px 16px rgba(0,0,0,0.2); object-fit: cover;">
+    <div class="speaker-section">
+        <div class="speaker-photo">
+            <img src="/../../images/ponentes/202504-PythonCDMX-Daniel-Paredes.png" alt="Daniel Paredes">
         </div>
         <div class="speaker-info">
-            <h4 style="margin: 0 0 0.5rem 0; font-size: 1.5rem; color: #333;">Daniel Paredes</h4>
-            <p style="margin: 0 0 1rem 0; font-size: 1rem; color: #666;">Desarrollador Web</p>
-            <p style="margin: 0 0 1rem 0; line-height: 1.6; color: #555;">Especialista en desarrollo web y creación de portafolios profesionales.</p>
+            <h4>Daniel Paredes</h4>
+            <p>Desarrollador Web</p>
+            <p>Especialista en desarrollo web y creación de portafolios profesionales.</p>
             <div class="speaker-links">
                 
                 
@@ -59,45 +59,45 @@ title: "¡Extra! Sudo Ciencias en la UNAM"
             </div>
         </div>
     </div>
-    <div class="talk-description" style="background: white; padding: 2rem; border-left: 6px solid #28a745;">
-        <p style="line-height: 1.8; font-size: 1.1rem; margin-bottom: 1.5rem; color: #333;">Si no presentamos nuestro trabajo, ¿Cómo van a saber lo buenos que somos? Ven a aprender como hacer tu portafolio en línea.</p>
+    <div class="talk-description">
+        <p>Si no presentamos nuestro trabajo, ¿Cómo van a saber lo buenos que somos? Ven a aprender como hacer tu portafolio en línea.</p>
         
-        <div class="tech-stack" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(180px, 1fr)); gap: 1rem; margin: 1.5rem 0;">
+        <div class="tech-stack">
             
-            <div style="background: #f8f9fa; padding: 1rem; border-radius: 8px; text-align: center; box-shadow: 0 2px 4px rgba(0,0,0,0.1); border-left: 3px solid #3776AB;">
-                <h5 style="margin: 0 0 0.5rem 0; color: #3776AB; font-size: 1rem;">🐍 Python</h5>
-                <p style="margin: 0; font-size: 0.85rem; color: #666;">Lenguaje principal</p>
+            <div>
+                <h5>🐍 Python</h5>
+                <p>Lenguaje principal</p>
             </div>
             
-            <div style="background: #f8f9fa; padding: 1rem; border-radius: 8px; text-align: center; box-shadow: 0 2px 4px rgba(0,0,0,0.1); border-left: 3px solid #28a745;">
-                <h5 style="margin: 0 0 0.5rem 0; color: #28a745; font-size: 1rem;">🌐 Web Development</h5>
-                <p style="margin: 0; font-size: 0.85rem; color: #666;">Desarrollo web</p>
+            <div>
+                <h5>🌐 Web Development</h5>
+                <p>Desarrollo web</p>
             </div>
             
-            <div style="background: #f8f9fa; padding: 1rem; border-radius: 8px; text-align: center; box-shadow: 0 2px 4px rgba(0,0,0,0.1); border-left: 3px solid #ffc107;">
-                <h5 style="margin: 0 0 0.5rem 0; color: #ffc107; font-size: 1rem;">📄 Portfolio</h5>
-                <p style="margin: 0; font-size: 0.85rem; color: #666;">Portafolio personal</p>
+            <div>
+                <h5>📄 Portfolio</h5>
+                <p>Portafolio personal</p>
             </div>
             
         </div>
         
-        <p style="line-height: 1.8; font-size: 1.1rem; margin-top: 1.5rem; color: #333; font-style: italic;">Aprende a crear un portafolio web profesional usando Python sin necesidad de conocimientos avanzados de diseño.</p>
+        <p>Aprende a crear un portafolio web profesional usando Python sin necesidad de conocimientos avanzados de diseño.</p>
     </div>
 </div>
 
-<div class="talk-section" style="margin: 3rem 0; border: 2px solid #e9ecef; border-radius: 16px; overflow: hidden;">
-    <div class="talk-header" style="background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); color: white; padding: 1.5rem; text-align: center;">
-        <h3 style="margin: 0 0 0.5rem 0; font-size: 1.8rem;"><i class="fas fa-rocket"></i> Programar en tiempos del Vibe-Coding</h3>
-        <p style="margin: 0; opacity: 0.9;"><i class="fas fa-stopwatch"></i> 30 minutos</p>
+<div class="talk-section">
+    <div class="talk-header">
+        <h3><i class="fas fa-rocket"></i> Programar en tiempos del Vibe-Coding</h3>
+        <p><i class="fas fa-stopwatch"></i> 30 minutos</p>
     </div>
-    <div class="speaker-section" style="background: linear-gradient(135deg, #f8f9fa 0%, #e9ecef 100%); padding: 2rem; display: flex; align-items: center; gap: 2rem;">
-        <div class="speaker-photo" style="flex-shrink: 0;">
-            <img src="/../../images/ponentes/202504-PythonCDMX-Charly-Roman.png" alt="Charly Roman" style="width: 120px; height: 120px; border-radius: 50%; border: 4px solid white; box-shadow: 0 4px 16px rgba(0,0,0,0.2); object-fit: cover;">
+    <div class="speaker-section">
+        <div class="speaker-photo">
+            <img src="/../../images/ponentes/202504-PythonCDMX-Charly-Roman.png" alt="Charly Roman">
         </div>
         <div class="speaker-info">
-            <h4 style="margin: 0 0 0.5rem 0; font-size: 1.5rem; color: #333;">Charly Roman</h4>
-            <p style="margin: 0 0 1rem 0; font-size: 1rem; color: #666;">Desarrollador y Educador</p>
-            <p style="margin: 0 0 1rem 0; line-height: 1.6; color: #555;">Experto en nuevas tecnologías y tendencias de programación.</p>
+            <h4>Charly Roman</h4>
+            <p>Desarrollador y Educador</p>
+            <p>Experto en nuevas tecnologías y tendencias de programación.</p>
             <div class="speaker-links">
                 
                 
@@ -105,29 +105,29 @@ title: "¡Extra! Sudo Ciencias en la UNAM"
             </div>
         </div>
     </div>
-    <div class="talk-description" style="background: white; padding: 2rem; border-left: 6px solid #28a745;">
-        <p style="line-height: 1.8; font-size: 1.1rem; margin-bottom: 1.5rem; color: #333;">¿Es verdad que con la AI todo va a cambiar? ¿Qué es eso del vibe coding? Esta charla será muy importante para tu futuro.</p>
+    <div class="talk-description">
+        <p>¿Es verdad que con la AI todo va a cambiar? ¿Qué es eso del vibe coding? Esta charla será muy importante para tu futuro.</p>
         
-        <div class="tech-stack" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(180px, 1fr)); gap: 1rem; margin: 1.5rem 0;">
+        <div class="tech-stack">
             
-            <div style="background: #f8f9fa; padding: 1rem; border-radius: 8px; text-align: center; box-shadow: 0 2px 4px rgba(0,0,0,0.1); border-left: 3px solid #007bff;">
-                <h5 style="margin: 0 0 0.5rem 0; color: #007bff; font-size: 1rem;">🤖 AI</h5>
-                <p style="margin: 0; font-size: 0.85rem; color: #666;">Inteligencia Artificial</p>
+            <div>
+                <h5>🤖 AI</h5>
+                <p>Inteligencia Artificial</p>
             </div>
             
-            <div style="background: #f8f9fa; padding: 1rem; border-radius: 8px; text-align: center; box-shadow: 0 2px 4px rgba(0,0,0,0.1); border-left: 3px solid #ff6b6b;">
-                <h5 style="margin: 0 0 0.5rem 0; color: #ff6b6b; font-size: 1rem;">⚡ Vibe-Coding</h5>
-                <p style="margin: 0; font-size: 0.85rem; color: #666;">Nuevas tendencias</p>
+            <div>
+                <h5>⚡ Vibe-Coding</h5>
+                <p>Nuevas tendencias</p>
             </div>
             
-            <div style="background: #f8f9fa; padding: 1rem; border-radius: 8px; text-align: center; box-shadow: 0 2px 4px rgba(0,0,0,0.1); border-left: 3px solid #6f42c1;">
-                <h5 style="margin: 0 0 0.5rem 0; color: #6f42c1; font-size: 1rem;">🚀 Future Tech</h5>
-                <p style="margin: 0; font-size: 0.85rem; color: #666;">Tecnologías futuras</p>
+            <div>
+                <h5>🚀 Future Tech</h5>
+                <p>Tecnologías futuras</p>
             </div>
             
         </div>
         
-        <p style="line-height: 1.8; font-size: 1.1rem; margin-top: 1.5rem; color: #333; font-style: italic;">Explora las nuevas tendencias en programación y cómo la IA está transformando el desarrollo de software.</p>
+        <p>Explora las nuevas tendencias en programación y cómo la IA está transformando el desarrollo de software.</p>
     </div>
 </div>
 
@@ -147,43 +147,15 @@ title: "¡Extra! Sudo Ciencias en la UNAM"
                 allowfullscreen>
             ></iframe>
         </div>
-        <a href="https://www.youtube.com/watch?v=J_Sggoh1uSY" class="youtube-btn">
-            <i class="fab fa-youtube"></i> Ver en YouTube
-        </a>
     </div>
 </div>
----
-
-
-### Unete a #PythonCDMX
-
-<div class="community-links">
-    
-        <a href="https://t.me/PythonCDMX" class="community-link telegram">
-            <i class="fab fa-telegram"></i> Telegram
-        </a>
-        <a href="https://www.meetup.com/python-mexico" class="community-link meetup">
-            <i class="fab fa-meetup"></i> Meetup
-        </a>
-        <a href="https://www.youtube.com/@PythonMexico" class="community-link youtube">
-            <i class="fab fa-youtube"></i> YouTube
-        </a>
-        <a href="https://github.com/PythonMexico/pythonCDMX" class="community-link github">
-            <i class="fab fa-github"></i> GitHub
-        </a>
-        <a href="https://www.instagram.com/pythoncdmx" class="community-link instagram">
-            <i class="fab fa-instagram"></i> Instagram
-        </a>
-        <a href="https://www.linkedin.com/company/pythoncdmx" class="community-link linkedin">
-            <i class="fab fa-linkedin"></i> LinkedIn
-        </a>
-    
-</div>
 
 ---
 
-<div style="text-align: center; margin-top: 3rem; padding: 2rem; background: #f8f9fa; border-radius: 12px;">
-    <p style="margin: 0; color: #6c757d; font-style: italic;">
-        *Última actualización: Generado automáticamente*
-    </p>
-</div>
+--8<-- "components/community-links.md"
+
+---
+
+--8<-- "components/quick-navigation.md"
+
+---
